deploy/k8s/overlays/openshift/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: web-dashboard
  namespace: spiffe-demo
spec:
  to:
    kind: Service
    name: web-dashboard
    weight: 100
  port:
    targetPort: 8080
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
